<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_mm7p10</name>
  <version>1.2.0</version>
  <description>The off_highway_mm7p10 package</description>
  <maintainer email="gabriela-adriana.lapuste@ro.bosch.com">Gabriela-Adriana Lapuste</maintainer>
  <license>Apache-2.0</license>

  <author email="gabriela-adriana.lapuste@ro.bosch.com">Gabriela-Adriana Lapuste</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>can_msgs</depend>
  <depend>tf2</depend>
  <depend>off_highway_can</depend>
  <depend>off_highway_mm7p10_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>tf2_geometry_msgs</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_ros</test_depend>

  <export>
   <build_type>ament_cmake</build_type>
  </export>
</package>
