<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>off_highway_sensor_drivers_examples</name>
  <version>0.6.3</version>
  <description>The off_highway_sensor_drivers_examples package</description>
  <maintainer email="sarah.huber@de.bosch.com">Sarah Huber</maintainer>
  <license>Apache-2.0</license>

  <author email="sarah.huber@de.bosch.com">Sarah Huber</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>

  <exec_depend>off_highway_premium_radar_sample</exec_depend>
  <exec_depend>off_highway_radar</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
